# plugin-framework

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  TODO.md  app.toml  finland_checklist.md  plugin_config.json  plugin_list.json  plugin_registry.json  plugin_registry.toml  requested_plugins.toml  system.json
lib/cglm/: CMakeLists.txt
lib/dynamic_metadata_resolver/: CMakeLists.txt  dynamic_metadata_resolver.h  dynamic_metadata_resolver_win32.c
lib/plugin_manager/: CMakeLists.txt  PluginFramework.cmake  PluginManagerLoadPlugins.cmake  PluginManagerLoadRegistry.cmake  file_io.c  file_io.h  plugin_manager.c  plugin_manager.h  plugin_manager_get_setup_context.c.in  plugin_manager_init_contexts.c.in  plugin_manager_init_contexts.h  plugin_manager_loader.c  plugin_manager_loader.h  plugin_manager_types.h  plugin_registry.c  plugin_registry.c.in  plugin_registry.h  plugin_registry.h.in
lib/plugin_manager/cmake/: PluginManagerGenerate.cmake  PluginManagerGenerated.cmake.in
lib/plugin_manager/internal_plugins/: CMakeLists.txt  environment_plugin.c  (+5 more)
lib/plugin_manager_bootloader/: CMakeLists.txt  plugin_manager_bootloader.c  plugin_manager_bootloader.h  plugin_manager_bootloader_generated.c.in  plugin_manager_bootloader_generated.h  plugin_manager_bootloader_main.c  plugin_metadata.c.in  plugin_metadata.h  plugin_registry.c.in
lib/test_lib/: CMakeLists.txt  test_lib.c  test_lib.h
plugin/logger_composite/: CMakeLists.txt  logger_composite_register.c  logger_composite_register.h  manifest.toml
plugin_manager_bootloader/: CMakeLists.txt  plugin_manager_bootloader.c  plugin_manager_bootloader_generated.c.in  plugin_manager_bootloader_generated.h
plugin_sdk/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/allocator_buddy/: CMakeLists.txt  allocator_buddy.c  allocator_buddy.h  allocator_buddy_register.c  allocator_buddy_register.h  manifest.toml
plugins/arena_allocator_default/: CMakeLists.txt  arena_allocator_default.c  arena_allocator_default.h  arena_allocator_default_register.c  arena_allocator_default_register.h  manifest.toml
plugins/draw_2d_default/: CMakeLists.txt  draw_2d_default.c  draw_2d_default.h  draw_2d_default_register.c  draw_2d_default_register.h  manifest.toml
plugins/draw_2d_plugin/: CMakeLists.txt  draw_2d_plugin.c  draw_2d_plugin_register.c  draw_2d_plugin_register.h
plugins/draw_default/: CMakeLists.txt  draw_default.c  draw_default.h  draw_default_register.c  draw_default_register.h  draw_default_render_frame.c  draw_default_render_frame.h  draw_default_start.c  draw_default_start.h  manifest.toml
plugins/draw_plugin/: CMakeLists.txt  draw_plugin.c  draw_plugin.h  draw_plugin_register.c  draw_plugin_register.h
plugins/environment_default/: CMakeLists.txt  environment_default.c  environment_default.h  environment_default_register.c  environment_default_register.h  manifest.toml
plugins/gui_application_default/: CMakeLists.txt  gui_application_default.c  gui_application_default.h  gui_application_default_register.c  gui_application_default_register.h  manifest.toml
plugins/gui_application_plugin/: CMakeLists.txt  gui_application_plugin.c  gui_application_plugin.h  gui_application_plugin_register.c  gui_application_plugin_register.h
plugins/input_default/: CMakeLists.txt  input_default.c  input_default.h  input_default_register.c  input_default_register.h  manifest.toml
plugins/input_plugin/: input_plugin.c  input_plugin.h  input_plugin_register.c  input_plugin_register.h
plugins/logger_console/: CMakeLists.txt  logger_console.c  logger_console.h  logger_console_register.c  logger_console_register.h  manifest.toml
plugins/plugin_manager_default/: CMakeLists.txt  manifest.toml  plugin_manager_default.c  plugin_manager_default.h  plugin_manager_default_bootstrap.c  plugin_manager_default_bootstrap.h  plugin_manager_default_register.c  plugin_manager_default_register.h
plugins/render_graph_default/: CMakeLists.txt  manifest.toml  render_graph_default.c  render_graph_default.h  render_graph_default_register.c  render_graph_default_register.h
plugins/renderer_vulkan/: CMakeLists.txt  manifest.toml  renderer_vulkan.c  renderer_vulkan.h  renderer_vulkan_bootstrap.c  renderer_vulkan_bootstrap.h  renderer_vulkan_buffer.c  renderer_vulkan_buffer.h  renderer_vulkan_cmd.c  renderer_vulkan_cmd.h  renderer_vulkan_conversion.c  renderer_vulkan_conversion.h  renderer_vulkan_descriptor_set.c  renderer_vulkan_descriptor_set.h  renderer_vulkan_image.c  renderer_vulkan_image.h  renderer_vulkan_immediate.c  renderer_vulkan_immediate.h  renderer_vulkan_pipeline.c  renderer_vulkan_pipeline.h  renderer_vulkan_platform.h  renderer_vulkan_platform_win32.c  renderer_vulkan_register.c  renderer_vulkan_register.h  renderer_vulkan_render.c  renderer_vulkan_render.h  renderer_vulkan_start.c  renderer_vulkan_start.h  renderer_vulkan_utils.c  renderer_vulkan_utils.h
plugins/renderer_vulkan_plugin/: CMakeLists.txt  renderer_vulkan_plugin.c  renderer_vulkan_plugin_register.c  renderer_vulkan_plugin_register.h
plugins/test_plugin/: CMakeLists.txt  test_plugin.c  test_plugin.h
plugins/test_plugin_2/: CMakeLists.txt  test_plugin_2.h
plugins/time_win32/: CMakeLists.txt  manifest.toml  time_win32.c  time_win32.h  time_win32_register.c  time_win32_register.h
plugins/window_win32/: CMakeLists.txt  manifest.toml  window_win32.c  window_win32.h  window_win32_register.c  window_win32_register.h  window_win32_window_events.c  window_win32_window_events.h
plugins/window_win32_plugin/: CMakeLists.txt  window_win32_plugin.c  window_win32_plugin.h  window_win32_plugin_key_converter.c  window_win32_plugin_key_converter.h  window_win32_plugin_register.c  window_win32_plugin_register.h  window_win32_plugin_window_events.c  window_win32_plugin_window_events.h
sdk/: CMakeLists.txt
src/: CMakeLists.txt  main.c  main_.c  main__.c
src/logging/: logging.c  logging.h
src/old/: main_.c
src/plugin_loader/: CMakeLists.txt  plugin_loader.c
src/renderer/: CMakeLists.txt  renderer.c  renderer.h
src_test/: CMakeLists.txt  main.c
(+196 files in other folders)
